@@ -92,7 +92,7 @@ jobs:
       pytest-xdist
       scikit-learn
       scipy
-      h5py
+      h5py>=2.10
       tqdm
       threadpoolctl
       fasteners
