@@ -9,7 +9,7 @@ dependencies:
   - fasteners
   - griddataformats
   - gsd
-  - h5py
+  - h5py>=2.10
   - hypothesis
   - joblib>=0.12
   - matplotlib==3.2.2
